src/objects/Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_NameX__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>Action_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Responsible_Team_Member__c</fullName>
        <label>Responsible Team Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <nameField>
        <label>Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>